# DMcTools

./: CMakeLists.txt  DMcTools.sln  DMcTools.vcproj  DMcTools_vc80.vcproj  DMcTools_vc90.sln  DMcTools_vc90.vcproj  Makefile  Makefile.std  README.md  toolconfig.h  unistd.h
DMcToolsTest/: DMcToolsTest.cpp  DMcToolsTest_vc90.vcproj  DiskReadSpeedTest.cpp  GaussianTest.cpp  HashStringTest.cpp  ImageRWSpeedTest.cpp  KDTreeTest.cpp  Matrix44Test.cpp  PullPushTest.cpp  TimerTest.cpp  VCDTest.cpp  tImageTest.cpp
DMcTools_vc120/: DMcTools_vc120.vcxproj  DMcTools_vc120.vcxproj.filters  Makefile.std  makefile
DMcTools_vc141/: DMcTools.vcxproj  DMcTools.vcxproj.filters
DMcTools_vc142/: DMcTools.vcxproj  DMcTools.vcxproj.filters
Half/: half.h  halfFunction.h  halfLimits.h
Image/: Bmp.cpp  Color.h  ColorMap.cpp  ColorMap.h  EnvMap.cpp  EnvMap.h  Filter.cpp  Gif.cpp  ImageAlgorithms.cpp  ImageAlgorithms.h  ImageLoadSave.cpp  ImageLoadSave.h  ImageSampling.cpp  LoadSaveParams.h  Makefile  Pixel.h  PullPush.h  Quant.cpp  Quant.h  QuantParams.h  RGBE.h  RGBEio.cpp  RGBEio.h  Targa.cpp  VCD.cpp  exif.c  fImage.h  jhead.c  jhead.h  jpgfile.c  tImage.h  tLoadSave.cpp  tPixel.h  ucImage.cpp  ucImage.h
Math/: AABB.cpp  AABB.h  Auint.h  BBox.h  BinaryRep.cpp  BinaryRep.h  CatmullRomSpline.cpp  CatmullRomSpline.h  DownSimplex.cpp  DownSimplex.h  HMatrix.h  HVector.cpp  HVector.h  Halton.h  HermiteSpline.cpp  HermiteSpline.h  Intersect.cpp  Intersect.h  KDBVector.h  KDBoxTree.h  KDIVector.h  KDItemTree.h  Makefile  Mappings.h  Matrix44.cpp  Matrix44.h  MiscMath.h  Perlin.cpp  Perlin.h  PerlinImproved.cpp  Quadric.cpp  Quadric.h  Random.h  SpaceFillCurve.h  Triangle.cpp  Triangle.h  TrigTable.h  Vector.cpp  Vector.h  VectorField.h  (+2 more)
Model/: AElements.h  BVH.cpp  BVH.h  BaseObject.h  BisonMe.cpp  BisonMe.h  BisonMe.y  Camera.cpp  CameraDB.cpp  CameraDB.h  FlexMe.cpp  FlexMe.l  KDVertex.h  LBVH.cpp  LBVH.h  LightDB.h  LoadOBJ.cpp  LoadPLY.cpp  LoadTRI.cpp  LoadVRML.cpp  LoadVRML.h  Makefile  Mesh.cpp  Mesh.h  MeshElements.h  Model.cpp  Model.h  RenderObject.cpp  RenderObject.h  SBVH.cpp  SBVH.h  SaveOBJ.cpp  SavePLY.cpp  SaveTRI.cpp  SaveVRML.cpp  SaveVRML.h  TextureDB.cpp  TextureDB.h  Traverser.cpp  Traverser.h  (+2 more)
Test/: BVHTest.cpp  CMakeLists.txt  DMcToolsTest.cpp  DiskReadSpeedTest.cpp  GaussianTest.cpp  HashStringTest.cpp  ImageRW.cpp  ImageRWSpeedTest.cpp  KDTreeTest.cpp  Makefile  MappingsTest.cpp  MathTest.cpp  Matrix44Test.cpp  PFMtoWRL.cpp  PullP.cpp  PullPushTest.cpp  README.md  RayTest.cpp  SpaceFillCurveTest.cpp  TimeTrig.cpp  TimerTest.cpp  VCDTest.cpp  gaussian.cpp  hashtest.cpp  imtest.cpp  tImageTest.cpp
Util/: Assert.h  ConfigParams.cpp  ConfigParams.h  Counters.cpp  Counters.h  Makefile  PerThread.h  StatTimer.cpp  StatTimer.h  Timer.cpp  Timer.h  ToolConfig.h  Utils.cpp  Utils.h  hash_map.h  sparker_Time.h  sparker_Time_irix.cpp  toolconfig.h
